Переработана архитектура